Revision history for mojo-checkbot

0.23 2011/11/010

0.22 2011/11/010
  - Mojolicious v2.25 bundled
  - Fixed a small bug that ioloop hasn't droped when queue is empty.
  - Added match-for-check and match-for-crawl option.
  - Added Authentication dialog

0.21 2011/10/27
  - Added evacuate option to set interval for temporary file output

0.20 2011/10/27
  - Fixed a bug on sleep option that hasn't block next queue propery

0.19 2011/10/27
  - Added noevacuate option
  - Improved command API

0.18 2011/10/26
  - Fixed oops on test

0.17 2011/10/26
  - Improved status filter on report
  - Reduced undef warnings on detecting lang on windows
  - URLs in stylesheets are also checked
  - Fixed a bug on resolving schime less url

0.16 2011/10/26
  - Improved internals
  - Improved documentation

0.15 2011/10/25
  - Reduced cache size
  - Fixed a small bug on resume
  - Reduced memory dissipation

0.14 2011/10/25
  - Fixed a bug on fetching very large report 
  - Script file is moved to mojo root
  - Mojolicious2.10 is bundled

0.13 2011/10/25
  - Redirection with meta tag also detected
  - Redirection is reported as separated requests

0.12 2011/10/24
  - Added resume option
  - Fixed a bug on timeout option

0.11 2011/10/23
  - Fixed a bug on installation

0.10 2011/10/23
  - Fixed some test bugs.
  - Document documentation.

0.09 2011/10/22
  - Context defaults to dom itself
  - help localized for japanese
  - Report design improved
  - Internal optimization

0.08 2011/10/22
  - crawling errors are also reported
  - help is written.

0.07 2011/10/21
  - timeout option added

0.06 2011/10/21
  - Checkbox for hide 2xx status added on report view
  - Behaves better on illigal rel path
  = fixed a bug on ua handling
  - Also checks ftp scheme
  - Also checks area tags

0.05 2011/10/21
  - Got better charset guessing
  - Right base url on redirect
  - Mojolicious 2.03 bundled

0.04 2011/10/21
  - img, link, script tags are also checked

0.03 2011/10/20