@@ -5,7 +5,7 @@ $(function() {
     $("tbody tr.dummy").remove();
     
     var dataKey = {
-        content     : 1,
+        context     : 1,
         literalURI  : 2,
         resolvedURI : 3,
         referer     : 4,
@@ -26,14 +26,12 @@ $(function() {
                 var newTr = $('<tr/>');
                 newTr.addClass('r'+String(data[dataKey.res]).substr(0,1));
                 newTr.addClass('r'+String(data[dataKey.res]));
-                newTr.append($('<td/>').html(data[dataKey.content] || '-'));
+                newTr.append($('<td/>').html(data[dataKey.context] || '-'));
                 newTr.append($('<td/>').html(data[dataKey.literalURI] || '-'));
                 newTr.append($('<td/>').html(data[dataKey.resolvedURI] || '-'));
                 newTr.append($('<td/>').html(data[dataKey.res] || '-'));
                 newTr.append($('<td/>').html(data[dataKey.referer] || '-'));
-                newTr.data('error', data[dataKey.error]);
-                newTr.data('dialog', data[dataKey.dialog]);
-                newTr.data('method', data[dataKey.method]);
+                newTr.data('checkbotData', data);
                 statistics[data[dataKey.res]] =
                                     (statistics[data[dataKey.res]] || 0) + 1;
                 var summaryCont = $("#summary");
@@ -77,39 +75,40 @@ $(function() {
     
     $("tbody tr").live('click', function() {
         var lb;
+        var data = $(this).data('checkbotData');
         if ($(this).hasClass('r401')) {
             lb = $('#trLightbox401');
-            lb.find('.realm').html($(this).data('dialog')['www-authenticate'][0]);
+            lb.find('.realm').html(data['www-authenticate'][0]);
         }
-        else if ($(this).data('dialog') && $(this).data('dialog').names) {
+        else if (data[dataKey.dialog] && data[dataKey.dialog].names) {
             lb = $('#trLightboxForm');
-            var names = $(this).data('dialog').names;
+            var names = data[dataKey.dialog].names;
             var cont = $('#commonForm table');
             cont.empty();
             for (var idx in names) {
-                var input = $('<input />', {type:'text', name:names[idx]});
-                var th = $('<th/>').html(names[idx]);
+                var input = $('<input />', {type:'text', name:names[idx].name, value:names[idx].value});
+                var th = $('<th/>').html(names[idx].name);
                 var td = $('<td/>').append(input);
                 var tr = $('<tr/>').append(th, td);
                 cont.append(tr);
             }
         } else {
             lb = $('#trLightbox');
-            if ($(this).data('error')) {
-                lb.find('.error textarea').html($(this).data('error'));
+            if (data[dataKey.error]) {
+                lb.find('.error textarea').html(data[dataKey.error]);
                 lb.find('.error').parent(0).show();
             } else {
                 lb.find('.error').parent(0).hide();
             }
         }
         var tmp = $(this).find('td');
-        lb.find('.context textarea').html(tmp.eq(0).html());
-        lb.find('.literalURI textarea').html(tmp.eq(1).html());
-        lb.find('.resolvedURI textarea').html(tmp.eq(2).html());
-        lb.find('.statusCode textarea').html(tmp.eq(3).html());
-        lb.find('.referer textarea').html(tmp.eq(4).html());
+        lb.find('.context textarea').html(data[dataKey.context]);
+        lb.find('.literalURI textarea').html(data[dataKey.literalURI]);
+        lb.find('.resolvedURI textarea').html(data[dataKey.resolvedURI]);
+        lb.find('.statusCode textarea').html(data[dataKey.res] || '-');
+        lb.find('.referer textarea').html(data[dataKey.referer]);
         $.lightbox(lb).show();
-        $(lb).data('originalTr', $(this));
+        $(lb).data('checkbotTr', $(this));
     });
     
     $("#summary").find('input').live('change', function() {
@@ -118,11 +117,14 @@ $(function() {
     });
     
     $("#commonForm").bind('submit', function(){
-        $.post('/post', {
-            'url'       : $("#trLightboxForm .resolvedURI textarea").html(),
-            'method'    : $('#trLightboxForm').data('originalTr').data('method'),
-            'param'     : $(this).serialize()
-        }, function(res) {
+        var data = $('#trLightboxForm').data('checkbotTr').data('checkbotData');
+        var new_data = {};
+        for (var key in data) {
+            new_data['key_' + key] = data[key];
+        }
+        new_data[dataKey.dialog] = undefined;
+        new_data[dataKey.param] = $(this).serialize();
+        $.post('/form', new_data, function(res) {
             fetch();
         });
         return false;
